yamls/ingress-kibana.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-logging
  labels:
    app: kibana
spec:
  rules:
  - host: kibana.apps.test.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-kibana
          servicePort: 5601
